force-app/main/default/objects/Program__c/fields/Academic_Group__c.field-meta.xml
<CustomField>
    <fullName>Academic_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Peoplesoft] - Relationship to the Academic Group</description>
    <label>Academic Group</label>
    <referenceTo>Academic_Group__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs_AcademicGroup</relationshipName>
    <type>Lookup</type>
</CustomField>