force-app/main/default/objects/Program__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Peoplesoft] - Location where the Program is available.</description>
    <label>Campus</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>