force-app/main/default/objects/Program__c/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <description>[Peoplesoft] - Examples inlcude: Graduate, Law, Non-Credit, Undergraduate</description>
    <label>Career</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Non-Credit</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>