force-app/main/default/objects/Program__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>[Peoplesoft] - Date the Program became active in PeopleSoft</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>