force-app/main/default/objects/Program__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>[Peoplesoft] - Code for the program (College)</description>
    <externalId>true</externalId>
    <label>Program Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>