force-app/main/default/objects/Program__c/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Peoplesoft] - Checkbox for status of program</description>
    <label>Program Status</label>
    <type>Checkbox</type>
</CustomField>