force-app/main/default/objects/Program__c/listViews/All_Programs.listView-meta.xml
<ListView>
    <fullName>All_Programs</fullName>
    <columns>NAME</columns>
    <columns>Program_Code__c</columns>
    <columns>Career__c</columns>
    <columns>Program_Status__c</columns>
    <columns>Campus__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Programs</label>
</ListView>